- Fixed some layout bugs

--- a/less/dataobject.less
+++ b/less/dataobject.less
@@ -6,12 +6,7 @@
 @import "variables.less";
 @import "ellipsis.less";
 
-body {
-    /*overflow-x: hidden;*/
-}
-
 .dataobject-page {
-
     .dataobject-tabs {
         .nav {
             float: right;
@@ -366,7 +361,7 @@ body {
                 }
 
                 .dataobject-info {
-                    font-size: 16px;
+                    font-size: 15px;
                     margin-bottom: 2px;
                 }
             }
